--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@babel/core": "7.1.6",
     "@svgr/webpack": "2.4.1",
+    "antd": "^3.12.4",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.0.0",
     "babel-jest": "23.6.0",
@@ -112,5 +113,13 @@
     "presets": [
       "react-app"
     ]
+  },
+  "devDependencies": {
+    "babel-plugin-import": "^1.11.0",
+    "css-loader": "^1.0.0",
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0",
+    "less-vars-to-js": "^1.3.0",
+    "style-loader": "^0.23.0"
   }
 }
